Amelioration et factorisation du code